@@ -1,3 +1,4 @@
+# $Id$
 # File: e_info.txt
 
 
@@ -17,8 +18,8 @@
 # is possible for several "ego-item" types to have the same "textual name",
 # such as with "Armor of Resistance" and "Shield of Resistance".
 
-# N:187 is hard-coded(Stormbringer)!
-# If it is moved, you should change monster_death in xtra2.c also.
+# **** NEVER RENUMBER!!!! ****
+# If you renumber this file, you should renumber defines.h too! (EGO_*)
 
 # Version stamp (required)
 
@@ -29,26 +30,29 @@ V:3.4.0
 N:1:of Mana
 X:A:24:20
 T:6:0:255
-W:5:3:9:10000
+#W:5:3:9:10000
+W:5:3:15:10000
 C:-30:-30:0:4
 R:100
-F:MANA | PVAL_M2
+F:MANA | PVAL_M2 | NO_ENCHANT
 
 N:2:of Power
 X:A:24:30
 T:6:0:255
-W:5:5:9:20000
+#W:5:5:9:20000
+W:5:5:30:20000
 C:-30:-30:0:3
 R:100
-F:SPELL | PVAL_M2
+F:SPELL | PVAL_M2 | NO_ENCHANT
 
 N:3:of Wizardry
 X:A:24:60
 T:6:0:255
-W:10:1:9:50000
+#W:10:1:9:50000
+W:10:1:50:50000
 C:-40:-40:0:3
 R:100
-F:MANA | SPELL | PVAL_M2
+F:MANA | SPELL | PVAL_M2 | NO_ENCHANT
 
 #N:4:of Spell
 #T:6:0:255
@@ -57,7 +61,7 @@ F:MANA | SPELL | PVAL_M2
 #C:0:0:0:0
 #R:100
 #F:ACTIVATE
-#F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+#F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD | NO_ENCHANT
 
 ### Body Armor ###
 
@@ -1591,6 +1595,7 @@ W:0:1:10:1000
 C:0:0:0:0
 R:100
 F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+F:NO_SEED
 
 N:148:Cursed
 X:B:0:0
@@ -1599,6 +1604,7 @@ W:0:1:10:0
 C:0:0:0:0
 R:100
 F:AUTO_CURSE
+F:NO_SEED
 
 # Scrolls
 N:149:Fireproof
@@ -1609,6 +1615,7 @@ W:0:1:10:1000
 C:0:0:0:0
 R:100
 F:IGNORE_FIRE
+F:NO_SEED
 
 # Wands & Staffs(NOT wishing nor nothing)
 N:150:of Plenty
@@ -2004,18 +2011,22 @@ X:A:24:0
 W:45:1:127:40000
 # sure it's bug
 #C:16:16:0:8
-C:16:16:0:4
+C:16:16:0:2
 R:100
 F:VAMPIRIC | STR | CON | BLOWS | FREE_ACT | HOLD_LIFE |
 F:RES_NEXUS | RES_CHAOS | RES_NETHER | RES_CONF
 F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
 F:NO_TELE | CURSED | HEAVY_CURSE
+R:80
+F:AUTO_CURSE
 R:60
 F:DRAIN_EXP
 R:60
 F:AGGRAVATE
 R:60
 F:DRAIN_HP
+#R:40
+#F:CURSE_NO_DROP
 
 # PernMangband ones
 
@@ -2026,6 +2037,7 @@ T:80:38:38
 W:0:1:3:3
 C:0:0:0:0
 R:100
+F:NO_SEED
 
 N:189:'Heineken'
 X:A:34:0
@@ -2034,6 +2046,7 @@ T:80:38:38
 W:0:1:3:2
 C:0:0:0:0
 R:100
+F:NO_SEED
 
 N:190:of Mistrust
 X:A:31:15
@@ -2071,3 +2084,6 @@ F:ANTIMAGIC_20
 #C:hit:dam:ac:pval-max
 #F:(attribute)|...
 #Z:(power)
+
+# **** NEVER RENUMBER!!!! ****
+# If you renumber this file, you should renumber defines.h too! (EGO_*)
