@@ -7,7 +7,7 @@
 # You should manually write the total # of rumous (lines - 10).
 
 N:*:Default
-609
+614
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -617,5 +617,11 @@ Afraid of dropping your weapon? Grasp it tight with both hands!
 Ever laid a carpet of potions?
 They say that never genocide the thieves.
 Ever wondered why you can see a {rj {w from afar while you cannot see a {bj{w?
+Wanna buy a sweet home? Doll yourself up!
+They say that without flintstone you cannot light a {ytorch{w.
+Don't you know that it's a fool who digs with sword?
+Ever tried to hit your comrade with {Ba Potion of Healing{w?
+Ever tried to hit your comrade sorc with {Ba Potion of Restore Mana{w?
+They say that 
 They say that 
 They say that 
