@@ -3401,8 +3401,9 @@ that keeps many algorithms happy.
 #define ETR4_TH_M3             0x00200000L     /* Item has +(up to 3) to hit */
 #define ETR4_TH_M5             0x00400000L     /* Item has +(up to 5) to hit */
 //#define ETR4_TD_M1             0x00800000L     /* Item has +1 to dam */
-#define ETR4_R_ESP             0x00800000L     /* Item has +1 to dam */
-#define ETR4_TD_M2             0x01000000L     /* Item has +(up to 2) to dam */
+//#define ETR4_TD_M2             0x01000000L     /* Item has +(up to 2) to dam */
+#define ETR4_R_ESP             0x00800000L     /* Item has a random ESP */
+#define ETR4_NO_SEED           0x01000000L     /* Item doesn't have random seed */
 #define ETR4_TD_M3             0x02000000L     /* Item has +(up to 3) to dam */
 #define ETR4_TD_M5             0x04000000L     /* Item has +(up to 5) to dam */
 #define ETR4_R_P_ABILITY       0x08000000L     /* Item has a random pval-affected ability */
